# ParallelCalc

./: .gitignore  CMakeLists.txt  Design.drawio  README.md
cmake/: FindGMP.cmake
include/: calculator.hpp
include/kafka/: kafka.hpp
src/: calculator.cpp  main.cpp
src/application/: consumer.cpp  producer.cpp
src/kafka/: kafka.cpp
tests/: test_basic.cpp  test_factorial.cpp
